// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingCard > Snapshot Tests > matches snapshot for default loading card 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
  </div>
</div>
`;

exports[`LoadingCard > Snapshot Tests > matches snapshot with custom rows 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
    <div
      class="animate-pulse bg-slate-800/50 rounded-lg h-20"
    />
  </div>
</div>
`;

exports[`LoadingSkeleton > Snapshot Tests > matches snapshot for default skeleton 1`] = `
<div>
  <div
    class="animate-pulse bg-slate-800/50 rounded w-full h-4"
  />
</div>
`;

exports[`LoadingSkeleton > Snapshot Tests > matches snapshot with custom dimensions 1`] = `
<div>
  <div
    class="animate-pulse bg-slate-800/50 rounded w-32 h-16"
  />
</div>
`;

exports[`LoadingSkeleton > Snapshot Tests > matches snapshot with custom styling 1`] = `
<div>
  <div
    class="animate-pulse bg-slate-800/50 w-full h-24 rounded-xl opacity-75"
  />
</div>
`;

exports[`LoadingSpinner > Snapshot Tests > matches snapshot for default spinner 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center gap-3"
  >
    <div>
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle text-primary w-8 h-8"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner > Snapshot Tests > matches snapshot for fullScreen spinner 1`] = `
<div>
  <div
    class="min-h-screen bg-gradient-to-br from-slate-950 via-slate-900 to-slate-950 flex items-center justify-center"
  >
    <div
      class="flex flex-col items-center justify-center gap-3"
    >
      <div>
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle text-primary w-8 h-8"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
      <p
        class="text-sm text-slate-400"
      >
        系统启动中
      </p>
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner > Snapshot Tests > matches snapshot for spinner with text 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center gap-3"
  >
    <div>
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle text-primary w-8 h-8"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
    </div>
    <p
      class="text-sm text-slate-400"
    >
      正在加载数据...
    </p>
  </div>
</div>
`;
